--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ langchain_community
 langchain_huggingface
 chromadb==0.5.3
 pypdf
+wandb==0.19.4
+lightgbm==4.5.0 ; python_version >= "3.8" and python_version < "4.0"
+xgboost==2.1.3 ; python_version >= "3.8" and python_version < "4.0"
+scikit_optimize==0.10.2 ; python_version >= "3.8" and python_version < "4.0"
