--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ wandb==0.19.4
 lightgbm==4.5.0 ; python_version >= "3.8" and python_version < "4.0"
 xgboost==2.1.3 ; python_version >= "3.8" and python_version < "4.0"
 scikit_optimize==0.10.2 ; python_version >= "3.8" and python_version < "4.0"
+plotly>=5.9.0 ; python_version >= "3.8" and python_version < "4.0"
+streamlit==1.41.1
+nbformat==5.10.4
+duckduckgo-search
